tests/paczka1/fuzzy1/46274096.err
Error in line 1: KKVNF A288 87,6
Error in line 12: 4JN7S A278 13,0
Error in line 17: A288 A288 84,1
Error in line 27: 4JN7S A904 85,9
Error in line 29: 4JN7S A278 32,2
Error in line 31: 4JN7S A904 36,6
Error in line 33: 3v6RC2bolj S195 55,4
Error in line 24: eNmpi1E S195 49,9
